practica2/jcc_files/gcl.java
/* Generated By:JavaCC: Do not edit this line. gcl.java */
package traductor;

//...

public class gcl implements gclConstants {
   //...

   public static void main(String[] args) {
           gcl parser = null;

           try {
                   if(args.length == 0) {
                           parser = new gcl(System.in);
                   }
                   else {
                           parser = new gcl(new java.io.FileInputStream(args[0]));
                   }
                   //Programa es el símbolo inicial de la gramática
                   parser.Programa();
                   //...
                   System.out.println("***** An\u00e1lisis terminado con \u00e9xito *****");
           }
           catch (java.io.FileNotFoundException e) {
                   System.err.println ("Fichero " + args[0] + " no encontrado.");
           }
           catch (TokenMgrError e) {
                   System.err.println("LEX_ERROR: " + e.getMessage());
           }
           catch (Exception e) {
                        // Handle the exception
                        System.err.println("An exception occurred: " + e.getMessage());
           }
        }

//---------------------------------------------------------
  static final public void Programa() throws ParseException {
    jj_consume_token(tPROGRAMA);
    jj_consume_token(tIDENTIFICADOR);
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tINTEGER:
      case tCHARACTER:
      case tBOOLEAN:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      declaracion_variables();
    }
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tINTEGER:
      case tCHARACTER:
      case tBOOLEAN:
      case tIDENTIFICADOR:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
      declaracion_procs_funcs();
    }
    jj_consume_token(tBEGGINING);
    instrucciones();
    jj_consume_token(tEND);
  }

//---------------------------------------------------------
  static final public void declaracion_variables() throws ParseException {
    label_3:
    while (true) {
      declaracion();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tINTEGER:
      case tCHARACTER:
      case tBOOLEAN:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_3;
      }
    }
  }

  static final public void declaracion() throws ParseException {
    tipo();
    lista_ids();
    jj_consume_token(tSEMICOLON);
  }

  static final public void asignacion() throws ParseException {
    jj_consume_token(tIDENTIFICADOR);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tOPENING_SQUARE_BRACKET:
      jj_consume_token(tOPENING_SQUARE_BRACKET);
      expresion_simple();
      jj_consume_token(tCLOSING_SQUARE_BRACKET);
      break;
    default:
      jj_la1[3] = jj_gen;
      ;
    }
    jj_consume_token(tASSIGN);
    expresion();
    jj_consume_token(tSEMICOLON);
  }

  static final public void lista_ids() throws ParseException {
    jj_consume_token(tIDENTIFICADOR);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tCOMA:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_4;
      }
      jj_consume_token(tCOMA);
      jj_consume_token(tIDENTIFICADOR);
    }
  }

  static final public void tipo() throws ParseException {
    if (jj_2_1(2)) {
      tipoArray();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tINTEGER:
      case tCHARACTER:
      case tBOOLEAN:
        tipoEscalar();
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void tipoEscalar() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tCHARACTER:
      jj_consume_token(tCHARACTER);
      break;
    case tBOOLEAN:
      jj_consume_token(tBOOLEAN);
      break;
    case tINTEGER:
      jj_consume_token(tINTEGER);
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void tipoArray() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tCHARACTER:
      jj_consume_token(tCHARACTER);
      break;
    case tBOOLEAN:
      jj_consume_token(tBOOLEAN);
      break;
    case tINTEGER:
      jj_consume_token(tINTEGER);
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tOPENING_SQUARE_BRACKET:
      jj_consume_token(tOPENING_SQUARE_BRACKET);
      expresion_simple();
      jj_consume_token(tCLOSING_SQUARE_BRACKET);
      break;
    default:
      jj_la1[8] = jj_gen;
      ;
    }
  }

//---------------------------------------------------------
  static final public void lista_una_o_mas_exps() throws ParseException {
    label_5:
    while (true) {
      expresion();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tENTACAR:
      case tCARAENT:
      case tSTRING:
      case tCHAR:
      case tOPENING_PARENTHESIS:
      case tPLUS:
      case tMINUS:
      case tNOT:
      case tCONSTANT:
      case tTRUE:
      case tFALSE:
      case tIDENTIFICADOR:
        ;
        break;
      default:
        jj_la1[9] = jj_gen;
        break label_5;
      }
    }
  }

  static final public void expresion() throws ParseException {
 { System.out.println("expresion"); }
    relacion();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tAND:
      case tOR:
        ;
        break;
      default:
        jj_la1[10] = jj_gen;
        break label_6;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tAND:
        jj_consume_token(tAND);
        break;
      case tOR:
        jj_consume_token(tOR);
        break;
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      relacion();
    }
  }

  static final public void relacion() throws ParseException {
    expresion_simple();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tGT:
    case tGE:
    case tLT:
    case tLE:
    case tEQUAL:
    case tNOTEQUAL:
      operador_relacional();
      expresion_simple();
      break;
    default:
      jj_la1[12] = jj_gen;
      ;
    }
  }

  static final public void operador_relacional() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tEQUAL:
      jj_consume_token(tEQUAL);
      break;
    case tNOTEQUAL:
      jj_consume_token(tNOTEQUAL);
      break;
    case tLT:
      jj_consume_token(tLT);
      break;
    case tLE:
      jj_consume_token(tLE);
      break;
    case tGT:
      jj_consume_token(tGT);
      break;
    case tGE:
      jj_consume_token(tGE);
      break;
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void expresion_simple() throws ParseException {
    termino();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tPLUS:
      case tMINUS:
        ;
        break;
      default:
        jj_la1[14] = jj_gen;
        break label_7;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tPLUS:
        jj_consume_token(tPLUS);
        break;
      case tMINUS:
        jj_consume_token(tMINUS);
        break;
      default:
        jj_la1[15] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      termino();
    }
  }

  static final public void termino() throws ParseException {
    factor();
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tTIMES:
      case tDIVIDE:
      case tMOD:
        ;
        break;
      default:
        jj_la1[16] = jj_gen;
        break label_8;
      }
      operador_multiplicativo();
      factor();
    }
  }

  static final public void operador_multiplicativo() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tTIMES:
      jj_consume_token(tTIMES);
      break;
    case tDIVIDE:
      jj_consume_token(tDIVIDE);
      break;
    case tMOD:
      jj_consume_token(tMOD);
      break;
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void factor() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tPLUS:
    case tMINUS:
    case tNOT:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tNOT:
        jj_consume_token(tNOT);
        break;
      case tPLUS:
        jj_consume_token(tPLUS);
        break;
      case tMINUS:
        jj_consume_token(tMINUS);
        break;
      default:
        jj_la1[18] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[19] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tOPENING_PARENTHESIS:
      jj_consume_token(tOPENING_PARENTHESIS);
      expresion();
      jj_consume_token(tCLOSING_PARENTHESIS);
      break;
    case tENTACAR:
    case tCARAENT:
    case tSTRING:
    case tCHAR:
    case tCONSTANT:
    case tTRUE:
    case tFALSE:
    case tIDENTIFICADOR:
      primario();
      break;
    default:
      jj_la1[20] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void primario() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tENTACAR:
      jj_consume_token(tENTACAR);
      jj_consume_token(tOPENING_PARENTHESIS);
      expresion();
      jj_consume_token(tCLOSING_PARENTHESIS);
      break;
    case tCARAENT:
      jj_consume_token(tCARAENT);
      jj_consume_token(tOPENING_PARENTHESIS);
      expresion();
      jj_consume_token(tCLOSING_PARENTHESIS);
      break;
    case tSTRING:
      jj_consume_token(tSTRING);
      break;
    default:
      jj_la1[21] = jj_gen;
      if (jj_2_2(2)) {
        jj_consume_token(tIDENTIFICADOR);
        jj_consume_token(tOPENING_PARENTHESIS);
        lista_una_o_mas_exps();
        jj_consume_token(tCLOSING_PARENTHESIS);
      } else if (jj_2_3(2)) {
        jj_consume_token(tIDENTIFICADOR);
        jj_consume_token(tOPENING_SQUARE_BRACKET);
        expresion();
        jj_consume_token(tCLOSING_SQUARE_BRACKET);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case tCONSTANT:
          jj_consume_token(tCONSTANT);
          break;
        case tCHAR:
          jj_consume_token(tCHAR);
          break;
        case tTRUE:
          jj_consume_token(tTRUE);
          break;
        case tFALSE:
          jj_consume_token(tFALSE);
          break;
        case tIDENTIFICADOR:
          jj_consume_token(tIDENTIFICADOR);
          break;
        default:
          jj_la1[22] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
  }

//---------------------------------------------------------
  static final public void declaracion_procs_funcs() throws ParseException {
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tIDENTIFICADOR:
        declaracion_proc();
        break;
      case tINTEGER:
      case tCHARACTER:
      case tBOOLEAN:
        declaracion_func();
        break;
      default:
        jj_la1[23] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tINTEGER:
      case tCHARACTER:
      case tBOOLEAN:
      case tIDENTIFICADOR:
        ;
        break;
      default:
        jj_la1[24] = jj_gen;
        break label_9;
      }
    }
  }

  static final public void declaracion_proc() throws ParseException {
    jj_consume_token(tIDENTIFICADOR);
    jj_consume_token(tOPENING_PARENTHESIS);
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tINTEGER:
      case tCHARACTER:
      case tBOOLEAN:
        ;
        break;
      default:
        jj_la1[25] = jj_gen;
        break label_10;
      }
      parametros_declaraciones();
    }
    jj_consume_token(tCLOSING_PARENTHESIS);
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tINTEGER:
      case tCHARACTER:
      case tBOOLEAN:
        ;
        break;
      default:
        jj_la1[26] = jj_gen;
        break label_11;
      }
      declaracion_variables();
    }
    jj_consume_token(tBEGGINING);
    instrucciones();
    jj_consume_token(tEND);
  }

  static final public void declaracion_func() throws ParseException {
    tipoEscalar();
    jj_consume_token(tIDENTIFICADOR);
    jj_consume_token(tOPENING_PARENTHESIS);
    label_12:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tINTEGER:
      case tCHARACTER:
      case tBOOLEAN:
        ;
        break;
      default:
        jj_la1[27] = jj_gen;
        break label_12;
      }
      parametros_declaraciones();
    }
    jj_consume_token(tCLOSING_PARENTHESIS);
    jj_consume_token(tBEGGINING);
    instrucciones();
    jj_consume_token(tEND);
  }

//---------------------------------------------------------
  static final public void instrucciones() throws ParseException {
    label_13:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tSELECTION:
      case tITERATION:
      case tIDENTIFICADOR:
        ;
        break;
      default:
        jj_la1[28] = jj_gen;
        break label_13;
      }
      instruccion();
    }
  }

  static final public void instruccion() throws ParseException {
    if (jj_2_4(2)) {
      llamar_funcion();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tIDENTIFICADOR:
        asignacion();
        break;
      case tSELECTION:
        seleccion();
        break;
      case tITERATION:
        bucle();
        break;
      default:
        jj_la1[29] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void llamar_funcion() throws ParseException {
    jj_consume_token(tIDENTIFICADOR);
    jj_consume_token(tOPENING_PARENTHESIS);
    parametros_llamada_funcion();
    jj_consume_token(tCLOSING_PARENTHESIS);
    jj_consume_token(tSEMICOLON);
  }

  static final public void parametros_llamada_funcion() throws ParseException {
  System.out.println("Parametros llamada funci\u00f3n");
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tENTACAR:
    case tCARAENT:
    case tSTRING:
    case tCHAR:
    case tOPENING_PARENTHESIS:
    case tPLUS:
    case tMINUS:
    case tNOT:
    case tCONSTANT:
    case tTRUE:
    case tFALSE:
    case tIDENTIFICADOR:
      if (jj_2_5(2)) {
        jj_consume_token(tIDENTIFICADOR);
        jj_consume_token(tOPENING_SQUARE_BRACKET);
        expresion_simple();
        jj_consume_token(tCLOSING_SQUARE_BRACKET);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case tIDENTIFICADOR:
          jj_consume_token(tIDENTIFICADOR);
          break;
        case tENTACAR:
        case tCARAENT:
        case tSTRING:
        case tCHAR:
        case tOPENING_PARENTHESIS:
        case tPLUS:
        case tMINUS:
        case tNOT:
        case tCONSTANT:
        case tTRUE:
        case tFALSE:
          expresion();
          break;
        default:
          jj_la1[30] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      break;
    default:
      jj_la1[31] = jj_gen;
      ;
    }
    jj_consume_token(tCOMA);
    label_14:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tENTACAR:
      case tCARAENT:
      case tSTRING:
      case tCHAR:
      case tOPENING_PARENTHESIS:
      case tPLUS:
      case tMINUS:
      case tNOT:
      case tCONSTANT:
      case tTRUE:
      case tFALSE:
      case tIDENTIFICADOR:
        ;
        break;
      default:
        jj_la1[32] = jj_gen;
        break label_14;
      }
      if (jj_2_6(2)) {
        jj_consume_token(tIDENTIFICADOR);
        jj_consume_token(tOPENING_SQUARE_BRACKET);
        expresion_simple();
        jj_consume_token(tCLOSING_SQUARE_BRACKET);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case tIDENTIFICADOR:
          jj_consume_token(tIDENTIFICADOR);
          break;
        case tENTACAR:
        case tCARAENT:
        case tSTRING:
        case tCHAR:
        case tOPENING_PARENTHESIS:
        case tPLUS:
        case tMINUS:
        case tNOT:
        case tCONSTANT:
        case tTRUE:
        case tFALSE:
          expresion();
          break;
        default:
          jj_la1[33] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
  }

  static final public void seleccion() throws ParseException {
    jj_consume_token(tSELECTION);
    label_15:
    while (true) {
      jj_consume_token(tCASE);
      expresion();
      jj_consume_token(tCOLON);
      instrucciones();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tCASE:
        ;
        break;
      default:
        jj_la1[34] = jj_gen;
        break label_15;
      }
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tOTHERWISE:
      jj_consume_token(tOTHERWISE);
      jj_consume_token(tCOLON);
      instrucciones();
      break;
    default:
      jj_la1[35] = jj_gen;
      ;
    }
    jj_consume_token(tEND_SELECTION);
  }

  static final public void bucle() throws ParseException {
    jj_consume_token(tITERATION);
    expresion();
    instrucciones();
    jj_consume_token(tEND_ITERATION);
  }

  static final public void parametros_declaraciones() throws ParseException {
    tipo();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case tREF:
      jj_consume_token(tREF);
      break;
    default:
      jj_la1[36] = jj_gen;
      ;
    }
    lista_ids();
    label_16:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tSEMICOLON:
        ;
        break;
      default:
        jj_la1[37] = jj_gen;
        break label_16;
      }
      jj_consume_token(tSEMICOLON);
      tipo();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tREF:
        jj_consume_token(tREF);
        break;
      default:
        jj_la1[38] = jj_gen;
        ;
      }
      lista_ids();
    }
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_3_3() {
    if (jj_scan_token(tIDENTIFICADOR)) return true;
    if (jj_scan_token(tOPENING_SQUARE_BRACKET)) return true;
    return false;
  }

  static private boolean jj_3_2() {
    if (jj_scan_token(tIDENTIFICADOR)) return true;
    if (jj_scan_token(tOPENING_PARENTHESIS)) return true;
    return false;
  }

  static private boolean jj_3R_18() {
    if (jj_scan_token(tIDENTIFICADOR)) return true;
    if (jj_scan_token(tOPENING_PARENTHESIS)) return true;
    return false;
  }

  static private boolean jj_3_1() {
    if (jj_3R_17()) return true;
    return false;
  }

  static private boolean jj_3_6() {
    if (jj_scan_token(tIDENTIFICADOR)) return true;
    if (jj_scan_token(tOPENING_SQUARE_BRACKET)) return true;
    return false;
  }

  static private boolean jj_3R_19() {
    if (jj_scan_token(tOPENING_SQUARE_BRACKET)) return true;
    return false;
  }

  static private boolean jj_3_4() {
    if (jj_3R_18()) return true;
    return false;
  }

  static private boolean jj_3_5() {
    if (jj_scan_token(tIDENTIFICADOR)) return true;
    if (jj_scan_token(tOPENING_SQUARE_BRACKET)) return true;
    return false;
  }

  static private boolean jj_3R_17() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(19)) {
    jj_scanpos = xsp;
    if (jj_scan_token(20)) {
    jj_scanpos = xsp;
    if (jj_scan_token(18)) return true;
    }
    }
    xsp = jj_scanpos;
    if (jj_3R_19()) jj_scanpos = xsp;
    return false;
  }
